# renderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  run.sh  translate_shaders.sh
inc/: FRect.h  Point.h  Shader.h  Shape.h  Texture.h  UnfilledBox.h
inc/SML/: Color.h  Font.h  FrameBuffer.h  NormColor.h  Point.h  Rect.h  Renderer.h  Shader.h  Shape.h  SimpleQuad.h  Texture.h  TexturedQuad.h  Time.h  Vector2.h  Window.h
inc/glad/: glad.h
shaders/: fragment_shader.glsl  vertex_shader.glsl
shaders/circle/: fragment_shader.glsl  vertex_shader.glsl
shaders/colored_rect/: vertex_shader.glsl
shaders/font_shader/: fragment_shader.glsl  vertex_shader.glsl
shaders/frame_buffer_shader/: fragment_shader.glsl
shaders/frame_buffer_shader_edge/: fragment_shader.glsl
shaders_h/: fragment_shader.h  vertex_shader.h
shaders_h/circle/: fragment_shader.h  vertex_shader.h
shaders_h/colored_rect/: fragment_shader.h  vertex_shader.h
shaders_h/font_shader/: fragment_shader.h  vertex_shader.h
shaders_h/frame_buffer_shader/: fragment_shader.h  vertex_shader.h
shaders_h/frame_buffer_shader_edge/: fragment_shader.h
src/: NormColor.cpp  Renderer.cpp  Shape.cpp  Texture.cpp  TexturedQuad.cpp  Time.cpp  UnfilledBox.cpp  Window.cpp  main.cpp
src/SML/: NormColor.cpp  Renderer.cpp  Shape.cpp  SimpleQuad.cpp  Texture.cpp  TexturedQuad.cpp  Time.cpp  UnfilledBox.cpp  Window.cpp  main.cpp
src/SML/glad/: glad.c
src/SML/stb_image/: stb_image_helper.cpp
src/glad/: glad.c
timesheet/: calculate_hours.sh  seger_sheet.csv
